# image-framer

./: .gitignore  Dockerfile  LICENSE  README.md  alicecom.py  build-images.ps1  database.py  docker-compose.build-images.yml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  main.py  manage.py  nginx-proxy-template.sh  nginx-proxy.conf  nginx-temp.conf  pyproject.toml  schemas.py  send-setup.ps1  setup-app.sh  setup.sh  sql_app.db
.github/workflows/: tests.yml
alicecom/: asgi.py  settings.py  urls.py  wsgi.py
app/: config.py  database.py  main.py  models.py  s3.py  schemas.py  utils.py
app/routers/: dbHandler.py  editHandler.py  images.py  s3Handler.py
backend/: .dockerignore  Dockerfile  Dockerfile.backend  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  s3.py  schemas.py
backend/app/routers/: dbHandler.py  editHandler.py  s3Handler.py
backend/tests/: test_edit.py
edit_images/: apps.py  models.py  services.py  urls.py  views.py
edit_images/migrations/: 0001_initial.py  0002_image_created_at.py
frontend/: .env  Dockerfile  Dockerfile.frontend  index.html  nginx.conf  package.json  tsconfig.app.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: SortableImage.jsx  caroosek.tsx  edit-add-framer.tsx  edit-white-bg.tsx  filesList.jsx  footer.jsx  frameGenerator.jsx  header.jsx  image-list.tsx  imageGrid.css  imageGrid.jsx  mode-toggle.tsx  theme-provider.tsx  (+1 more)
static/css/: index.css
templates/: index.html
web/: views.py
(+14 files in other folders)
